--- a/Home Work 4/1.tex
+++ b/Home Work 4/1.tex
@@ -79,6 +79,6 @@ Thus, we would have at least $1 - e^{-\frac{4\epsilon^2p}{3(1-\epsilon)^2}}$ pro
 
 \textbf{Multiplicative Chernoff Bound} from \href{https://en.wikipedia.org/wiki/Chernoff_bound}{\textbf{Wikipedia}}\par
 Suppose $X_1$, ..., $X_n$ are independent random variables taking values in $\{0, 1\}$. Let $X$ denote their sum and let $\mu = E[X]$ denote the sum's expected value. Then for any $\sigma > 0$,
-$$Pr(X \ge (1 + \sigma)\mu) \le e^{-\frac{\theta^2\mu}{3}} (0 < \sigma < 1)$$
+$$Pr(X \ge (1 + \sigma)\mu) \le e^{-\frac{\sigma^2\mu}{3}} (0 < \sigma < 1)$$
 \end{enumerate}
 \end{document}
