--- a/Home Work 5/1.tex
+++ b/Home Work 5/1.tex
@@ -36,12 +36,13 @@
 there would be one tree with 64 nodes.
 \item [Problem 2]\textbf{Solution:}\par
 Let's say the potential function is $f(n) = cn\log n$. \par
-Insert operation: $\log n + f(n + 1) - f(n) = \log n + c(n+1)\log n+1 - cn\log n = O(\log n)$\par
-Delete operation: $\log n + f(n - 1) - f(n) = \log n + c(n-1)\log n-1 - cn\log n = O(1)$\par
+Insert operation: $\log n + f(n + 1) - f(n) = \log n + c(n+1)\log (n+1) - cn\log n = O(\log n)$\par
+Delete operation: $\log n + f(n - 1) - f(n) = \log n + c(n-1)\log (n-1) - cn\log n = O(1)$\par
 
 \item [Problem 3]\textbf{Solution:}\par
 For all even number $n$, $n$-element heap has a element with one child.\par
 The child is lay on right most position of the last layer. This element would be on the top of his child.
+If consider this binary heap as an 1-index array, child would be in the $n^{th}$ position while it's father lie on the $\lfloor\frac{n}{2}\rfloor ^ {th}$ position.
 \item [Problem 4]\textbf{Solution:}\par
 Assume $n$,$m$ is the number of nodes and edges in a graph. When applying Dijkstra with $k$-ary heap. The time complexity is
 $O(m\log_k n + nk\log_k n)$\par
@@ -50,20 +51,20 @@ Now, $n = 2^d, m = d2^{d-1}$, let's say $f(k) = d2^{d-1}\log_k 2^d + 2^dk\log_k 
 	&f(k) = d2^{d-1}\log_k 2^d + 2^dk\log_k 2^d&\\
 	&= d2^{d-1}\frac{\log_2 2^d}{\log_2 k} + 2^dk \frac{\log_2 2^d}{\log_2 k}\\
 	&= \frac{d^22^{d-1} + kd2^{d}}{\log_2 k}\\
-	&\text{Take deravative of $f(k)$}\\
+	&\text{Take derivative of $f(k)$}\\
 	&f'(k) = \frac{d2^d\log_2 k - \frac{(d^22^{d-1} + kd2^{d})}{k\ln 2}}{\log_2^2 k}\\
 	&\text{assume $f'(k) = 0$, obtain that}\\
 	&\frac{d}{2} = k\ln k - k\\
 	&\text{the solution of $k$ would give us the best bound}
 \end{flalign*}
-But what is the best bound? Appartently if we choose $k = d/2$, we can obtain a bound of $O(\frac{d^22^d}{\log d})$. Now I am going to approve this bound is same as the bound of best $k$. To achieve that, we need prove the following:
+But what is the best bound? Apparently if we choose $k = d/2$, we can obtain a bound of $O(\frac{d^22^d}{\log d})$. Now I am going to approve this bound is same as the bound of best $k$. To achieve that, we need prove the following:
 
 \begin{flalign*}
-	&\text{for a constant $C$ and the best $k_0$ which follows $\frac{d}{2} = k_0\ln k_0 - k_0$, the following inequlity should holds:}&\\
+	&\text{for a constant $C$ and the best $k_0$ which follows $\frac{d}{2} = k_0\ln k_0 - k_0$, the following inequality should holds:}&\\
 	&\frac{d^22^{d-1} + k_0d2^{d}}{\log_2 k_0} \ge C \frac{d^22^d}{\log_2 d}&\\
 	&C \le \min_d(\frac{\log d}{\log k_0} * \frac{d + 2k_0}{2d})\\
 	&\frac{\log d}{\log k_0} * \frac{d + 2k_0}{2d} \ge \frac{\log d}{\log k_0} * \frac{1}{2} \ge \frac{1}{2}\\ 	
 \end{flalign*}
-Thus there is a constant $C < \frac{1}{2}$ to achieve this inequlity. Now we can say the best bound is indeed $O(\frac{d^22^d}{\log d})$.
+Thus there is a constant $C < \frac{1}{2}$ to achieve this inequality. Now we can say the best bound is indeed $O(\frac{d^22^d}{\log d})$.
 \end{enumerate}
 \end{document}
